Collapse navbar when leaving the page on mobile (coming-back on cached page bug)

--- a/source/_includes/navbar.sass
+++ b/source/_includes/navbar.sass
@@ -162,6 +162,11 @@ li
     margin: 0
     list-style-type: none
 
+  li
+    width: fit-content
+    margin-left: auto
+    margin-right: auto
+
   li.lang
     display: inline-block
 
